OCaml 4.04.0:
-------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- GPR#187, GPR#578: Local opening of modules in a pattern.
  Syntax: "M.(p)", "M.[p]","M.[| p |]", "M.{p}"
  (Florian Angeletti, Jacques Garrigue, review by Alain Frisch)

- GPR#301: local exception declarations "let exception ... in"
  (Alain Frisch)

- PR#7233: Support GADT equations on non-local abstract types
  (Jacques Garrigue)


### Compilers and runtime system:

- PR#6217, GPR#538: Optimize performance of record update:
  no more performance cliff when { foo with t1 = ..; t2 = ...; ... }
  hits 6 updated fields
  (Olivier Nicole, review by Thomas Braibant)

* PR#6475, GPR#464: interpret all command-line options before compiling any files,
  changes (improves) the semantics of repeated -o options or -o combined with -c
  see the super-detailed commit message at
    https://github.com/ocaml/ocaml/commit/da56cf6dfdc13c09905c2e07f1d4849c8346eec8
  (whitequark)

- PR#7023, GPR#336: Better unboxing strategy
  (Alain Frisch, Pierre Chambart)

- PR#7200, GPR#539: Improve, fix, and add test for parsing/pprintast.ml
  (Runhang Li, David Sheets, Alain Frisch)
- GPR#548: empty documentation comments
  (Florian Angeletti)

- GPR#580: Optimize immutable float records
  (Pierre Chambart, review by Marc Shinwell)

### Language tooling and user interface

- PR#7139: clarify the wording of Warning 38
  (Unused exception or extension constructor)
  (Gabriel Scherer)

### Tools:

- GPR#452: Make the output of ocamldep more stable
  (Alain Frisch)

- GPR#613: make ocamldoc use -open arguments
  (Florian Angeletti)

- MPR#7248: have ocamldep interpret -open arguments in left-to-right order
  (Gabriel Scherer, report by Anton Bachin)

- Add the -no-version option to the toplevel
  (Sébastien Hinderer)

### Standard library:

- GPR#589: Add a non-allocating function to recover the number of
  allocated minor words.