@@ -1,4 +1,4 @@
-OCaml 4.04.0:
+typing/datarepr.mlOCaml 4.04.0:
 -------------
 
 (Changes that can break existing programs are marked with a "*")
@@ -142,6 +142,9 @@ OCaml 4.04.0:
 - PR#7276: Support more than FD_SETSIZE sockets in Windows' emulation
   of select
   (David Scott, review by Alain Frisch)
+
+- PR#7278: Prevent private inline records from being mutated
+  (Alain Frisch, report by Pierre Chambart)
 
 - GPR#600: (similar to GPR#555) ensure that register typing constraints are
   respected at N-way join points in the control flow graph
